Featured post css issue fix

--- a/src/components/featured-post-list/featured-post-list.scss
+++ b/src/components/featured-post-list/featured-post-list.scss
@@ -155,6 +155,9 @@
       margin-top: 0 !important;
     }
   }
+  ::v-deep .VueCarousel-slide {
+    min-width: 33.33%;
+  }
   @media screen and (max-width: 991px) {
     .card {
       max-height: 150px;
