--- a/src/components/seller-profile/seller-profile.html
+++ b/src/components/seller-profile/seller-profile.html
@@ -47,11 +47,7 @@
                 />
               </div>
               <div class="social-rating">
-                <Star
-                  :data="postedByData.reviews"
-                  :pageType="type + '-profile'"
-                  :pageId="Number(id)"
-                />
+                <Star :pageType="type + '-profile'" :pageId="Number(id)" />
               </div>
             </div>
             <p>{{postedByData.desc}}</p>
