--- a/src/views/lease-a-car-details/lease-a-car-details.html
+++ b/src/views/lease-a-car-details/lease-a-car-details.html
@@ -203,7 +203,7 @@
             ></iframe>
           </div>
           <div class="social-rating mt-4">
-            <Star :data="leaseData.reviews" pageType="lease"
+            <Star pageType="lease"
             :pageId="Number(getLeaseId)" />
             <div class="social">
               <img
