--- a/src/components/add-review/add-review.scss
+++ b/src/components/add-review/add-review.scss
@@ -14,6 +14,7 @@
 }
 ::v-deep .popup-body {
   text-align: left;
+  margin-bottom: 20px !important;
   label {
     font-weight: 500;
     margin-top: 15px;
@@ -41,9 +42,6 @@
       font-weight: 400;
       font-size: 0.875rem !important;
       flex: 1 0 100%;
-    }
-    textarea {
-      margin-bottom: 20px;
     }
   }
 }
