rental page updates

--- a/src/components/rental-category-select/rental-category-select.html
+++ b/src/components/rental-category-select/rental-category-select.html
@@ -2,6 +2,8 @@
   <div class="row">
     <div class="col-12 mt-4 mb-2">
       <h5 class="heading">Select Your <span>Rental Car</span></h5>
+      <!-- prettier-ignore -->
+      <Button type="primary" class="float-right" text="Post a new Rental" @click="newPost()" />
     </div>
     <template>
       <div
