Open times issue fixes and updates

--- a/src/components/classifieds-form/classifieds-form.scss
+++ b/src/components/classifieds-form/classifieds-form.scss
@@ -4,6 +4,12 @@
     width: 600px;
     max-width: 90%;
 
+    div[class*="col-12"] {
+      > label {
+        font-weight: 800;
+      }
+    }
+
     .button-wrapper {
       span {
         color: $purple;
