--- a/src/components/garage-details/garage-details.scss
+++ b/src/components/garage-details/garage-details.scss
@@ -142,6 +142,7 @@
           margin-bottom: 0;
           padding: 5px 0;
           font-weight: 600;
+          text-transform: capitalize;
           &:last-child {
             text-align: right;
             color: $green !important;
