--- a/src/components/rental-form/rental-form.scss
+++ b/src/components/rental-form/rental-form.scss
@@ -3,6 +3,11 @@
     height: calc(100vh - 156px);
     width: 600px;
     max-width: 90%;
+    div[class*="col-12"] {
+      > label {
+        font-weight: 800;
+      }
+    }
 
     .button-wrapper {
       span {
